syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

import "google/protobuf/wrappers.proto";

message SalesArrangementParametersCustomerChange3602 {
	int32 HouseholdId = 1;

	google.protobuf.BoolValue IsSpouseInDebt = 2;
}