syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

import "google/protobuf/wrappers.proto";
import "NullableGrpcDate.proto";

message SalesArrangementParametersMortgage {
	cis.types.NullableGrpcDate ExpectedDateOfDrawing = 1;
	string IncomeCurrencyCode = 2;
	string ResidencyCurrencyCode = 3;
	google.protobuf.Int32Value ContractSignatureTypeId = 4;
	repeated LoanRealEstate LoanRealEstates = 5;
	google.protobuf.Int32Value Agent = 6;
	google.protobuf.BoolValue AgentConsentWithElCom = 7;

	message LoanRealEstate {
		int64 RealEstateTypeId = 1;
		bool IsCollateral = 2;
		int32 RealEstatePurchaseTypeId = 3;
	}
}
